--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,1 +1,4 @@
 <h1>Welcome to Online Dating</h1>
+<a href="/auth/facebook">
+<button type="button" class="btn btn-primary btn-lg">Login With Facebook</button>
+</a>
