--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -2,7 +2,16 @@
 {{#if user}}
 <p>You are logged in..</p>
 {{else}}
-<a href="/auth/facebook">
-<button type="button" class="btn btn-primary btn-lg">Login With Facebook</button>
-</a>
+<h1>
+  <a href="/auth/facebook">
+    <button type="button" class="btn btn-primary btn-lg">Login With Facebook</button>
+  </a>
+</h1>
+
+
+<h1>
+  <a href="/auth/google">
+   <button type="button" class="btn btn-danger btn-lg">Login With Google</button>
+  </a>
+</h1>
 {{/if}}
