--- a/views/newAccount.handlebars
+++ b/views/newAccount.handlebars
@@ -1,21 +1,30 @@
 <div class="row">
   <div class="col-sm-4">
-    <form action="/signup">
+    <form action="/signup" method="POST">
+    {{#each errors}}
+    <div class="alert alert-danger">
+      {{text}}
+    </div>
+    {{/each}}
       <div class="form-group">
         <label for="username">Fullname</label>
-        <input type="text" name="username" id="username" class="form-control">
+        <input type="text" name="username" id="username" value="{{fullname}}"
+        class="form-control" required>
       </div>
       <div class="form-group">
         <label for="email">Email</label>
-        <input type="text" name="email" id="email" class="form-control">
+        <input type="text" name="email" id="email" value="{{email}}"
+        class="form-control">
       </div>
       <div class="form-group">
         <label for="password">Password</label>
-        <input type="password" name="password" id="password" class="form-control">
+        <input type="password" name="password" value="{{password}}" id="password" 
+        class="form-control" required>
       </div>
       <div class="form-group">
         <label for="password2">Confirm password</label>
-        <input type="password" name="password2" id="password2" class="form-control">
+        <input type="password" name="password2" value="{{password2}}" id="password2" 
+        class="form-control" required>
       </div>
       <button type="submit" class="btn btn-primary">Signup</button>
     </form>
