finished signup form

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -18,6 +18,9 @@
     </h1>
     <p class="center">or</p>
     <form action="/login">
+    {{#each success}}
+    <p class="green">{{text}}</p>
+    {{/each}}
       <div class="form-group">
           <label for="email">Email</label>
           <input type="text" name="email" id="email" class="form-control">
