--- a/views/newAccount.handlebars
+++ b/views/newAccount.handlebars
@@ -3,6 +3,7 @@
     <form action="/signup" method="POST">
     {{#each errors}}
     <div class="alert alert-danger">
+      <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
       {{text}}
     </div>
     {{/each}}
