--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -17,9 +17,12 @@
       </a>
     </h1>
     <p class="center">or</p>
-    <form action="/login">
+    <form action="/login" method="POST">
     {{#each success}}
     <p class="green">{{text}}</p>
+    {{/each}}
+    {{#each errors}}
+    <p class="red">{{text}}</p>
     {{/each}}
       <div class="form-group">
           <label for="email">Email</label>
