--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -2,7 +2,9 @@
 
   <div class="col-sm">
     <div class="card" style="width: 18rem;">
+      <a href="/uploadImage">
       <img src="{{user.image}}" class="card-img-top" alt="...">
+      </a>
       <div class="card-body">
       </div>
     </div>
